Main page is done

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jude Tejada | Front-End Developer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="white">
-  <h1 class="heading--1">hello</h1>
-  <button class="btn btn--primary">hello</button>
-  <button class="btn btn--secondary">hello</button>
-  <script src="../src/JS/main.js"></script>
+
+  <main class="main">
+    <div class="container">
+      <!-- START OF NAV -->
+      <nav class="nav">
+        <div class="nav__content">
+          <a href="#" class="nav__logo"> Jude Tejada</a>
+
+
+          <ul class="nav__ul">
+            <li class="nav__li"><a href="#" class="nav__link">About</a></li>
+            <li class="nav__li"><a href="#" class="nav__link">Projects</a></li>
+          </ul>
+        </div> <!-- nav -- Content-->
+      </nav>
+      <!-- END OF NAV -->
+      <header class="header">
+        <div class="header__content">
+          <h4 class="heading--4 mb-3">Hi I'm a Front-End Developer</h4>
+          <h1 class="heading--1">I Make Good Stuffs With The Web</h1>
+          <p class="paragraph mt-1 paragraph--hero">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed amet id
+            netus tellus
+            aenean
+            augue a Praesent congue.</p>
+        </div>
+        <button class="btn btn--outline">See my Works</button>
+      </header>
+      <!--Container-->
+    </div>
+  </main>
+
+
+
+  <script src="../src/JS/main.js" defer></script>
 </body>
 
 </html>
