Project and about done

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,134 @@
       </header>
       <!--Container-->
     </div>
+
+    <!-- ABOUT CONTAINER -->
+    <section class="about container">
+      <div class="about__content">
+        <h2 class="heading--2">About me</h2>
+
+        <article class="about__description">
+          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Montes, enim egestas mattis
+            velit
+            sit. Interdum duis euismod sed ultricies orci enim volutpat. Dignissim etiam consectetur ultricies tellus
+            vestibulum vitae. Faucibus turpis mattis tortor metus, et.i enim volutpat. Dignissim etiam consectetur
+            ultricies tellus vestibulum vitae. Faucibus turpis mattis tortor metus, et.</p>
+          <br><br>
+          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Montes, enim egestas mattis
+            velit
+            sit. Interdum duis euismod sed ultricies orci enim volutpat. Dignissim etiam consectetur ultricies tellus
+            vestibulum vitae. Faucibus turpis mattis tortor metus, et.i enim volutpat. Dignissim etiam consectetur
+            ultricies tellus vestibulum vitae. Faucibus turpis mattis tortor metus, et.</p>
+
+
+        </article>
+      </div>
+    </section>
+
+    <!-- PROJECT CONTAINER -->
+    <section class="projects container">
+      <div class="projects__content">
+        <h2 class="heading--2">Featured Projects</h2>
+        <!--PROJECT-->
+        <div class="project">
+          <figure class="project__photo">
+            <img src="../src/assets/work1.jpg" alt="Fiddles Project" class="project__img">
+          </figure>
+
+          <article class="project__content">
+            <h4 class="heading--4">Fiddles</h4>
+            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae et massa vitae nullam
+              velit. Ut in amet
+              tincidunt dignissim vestibulum.</p>
+
+            <div class="project__btns">
+              <button class="btn btn--primary mr-1">
+                <a href="#">See Live</a>
+              </button>
+              <button class="btn btn--secondary">
+                <a href="#">View Repo</a>
+              </button>
+            </div>
+          </article>
+        </div>
+        <!--END OF PROJECT-->
+
+        <!--PROJECT-->
+        <article class="project">
+          <figure class="project__photo">
+            <img src="../src/assets/work2.jpg" alt="Movie Library Project" class="project__img">
+          </figure>
+
+          <div class="project__content">
+            <h4 class="heading--4">Movie Library</h4>
+            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae et massa vitae nullam
+              velit. Ut in amet
+              tincidunt dignissim vestibulum.</p>
+
+            <div class="project__btns">
+              <button class="btn btn--primary mr-1">
+                <a href="#">See Live</a>
+              </button>
+              <button class="btn btn--secondary">
+                <a href="#">View Repo</a>
+              </button>
+            </div>
+          </div>
+        </article>
+        <!--END OF PROJECT-->
+
+
+        <!--PROJECT-->
+        <article class="project">
+          <figure class="project__photo">
+            <img src="../src/assets/work3.jpg" alt="Findhub Project" class="project__img">
+          </figure>
+
+          <div class="project__content">
+            <h4 class="heading--4">Findhub</h4>
+            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae et massa vitae nullam
+              velit. Ut in amet
+              tincidunt dignissim vestibulum.</p>
+
+            <div class="project__btns">
+              <button class="btn btn--primary mr-1">
+                <a href="#">See Live</a>
+              </button>
+              <button class="btn btn--secondary">
+                <a href="#">View Repo</a>
+              </button>
+            </div>
+          </div>
+        </article>
+        <!--END OF PROJECT-->
+      </div> <!-- PROJECT CONTENT-->
+    </section>
+
+    <section class="smallprojects">
+      <div class="container">
+        <div class="smallprojects__content">
+          <h2 class="heading--2">Noteworthy Projects</h2>
+
+          <!-- SMALL PROJECT START -->
+          <article class="smallproject">
+
+            <div class="smallproject__left">
+              <h4 class="heading--4">Katie Holmes Website</h4>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Commodo sed sed feugiat
+                sagittis purus arcu. In
+                viverra massa sed dolor nisl, sit.</p>
+            </div>
+            <div>
+              <img src="../src/assets/linkvg.svg" alt="link to site icon" class="smallproject__icon">
+            </div>
+          </article>
+          <!-- SMALL PROJECTE ND -->
+        </div>
+      </div>
+    </section>
+
   </main>
+
 
 
 
