Desktop version is finished

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <!-- START OF NAV -->
       <nav class="nav">
         <div class="nav__content">
-          <a href="#" class="nav__logo"> Jude Tejada</a>
+          <a href="#" class="logo"> Jude Tejada</a>
 
 
           <ul class="nav__ul">
@@ -64,10 +64,10 @@
 
     <!-- PROJECT CONTAINER -->
     <section class="projects container">
-      <div class="projects__content">
+      <section class="projects__content">
         <h2 class="heading--2">Featured Projects</h2>
         <!--PROJECT-->
-        <div class="project">
+        <section class="project">
           <figure class="project__photo">
             <img src="../src/assets/work1.jpg" alt="Fiddles Project" class="project__img">
           </figure>
@@ -87,16 +87,16 @@
               </button>
             </div>
           </article>
-        </div>
+        </section>
         <!--END OF PROJECT-->
 
         <!--PROJECT-->
-        <article class="project">
+        <section class="project">
           <figure class="project__photo">
             <img src="../src/assets/work2.jpg" alt="Movie Library Project" class="project__img">
           </figure>
 
-          <div class="project__content">
+          <article class="project__content">
             <h4 class="heading--4">Movie Library</h4>
             <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae et massa vitae nullam
               velit. Ut in amet
@@ -110,18 +110,18 @@
                 <a href="#">View Repo</a>
               </button>
             </div>
-          </div>
-        </article>
+          </article>
+        </section>
         <!--END OF PROJECT-->
 
 
         <!--PROJECT-->
-        <article class="project">
+        <section class="project">
           <figure class="project__photo">
             <img src="../src/assets/work3.jpg" alt="Findhub Project" class="project__img">
           </figure>
 
-          <div class="project__content">
+          <article class="project__content">
             <h4 class="heading--4">Findhub</h4>
             <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae et massa vitae nullam
               velit. Ut in amet
@@ -135,15 +135,17 @@
                 <a href="#">View Repo</a>
               </button>
             </div>
-          </div>
-        </article>
+          </article>
+        </section>
         <!--END OF PROJECT-->
-      </div> <!-- PROJECT CONTENT-->
+      </section> <!-- PROJECT CONTENT-->
     </section>
+    <!-- END OF MAIN PROJECT -->
 
+    <!-- SMALL PROJECT -->
     <section class="smallprojects">
       <div class="container">
-        <div class="smallprojects__content">
+        <section class="smallprojects__content">
           <h2 class="heading--2">Noteworthy Projects</h2>
 
           <!-- SMALL PROJECT START -->
@@ -155,16 +157,150 @@
                 sagittis purus arcu. In
                 viverra massa sed dolor nisl, sit.</p>
             </div>
-            <div>
-              <img src="../src/assets/linkvg.svg" alt="link to site icon" class="smallproject__icon">
+
+            <div class="smallproject__icon">
+              <a href="#" target="_blank">
+                <img src="../src/assets/linkvg.svg" alt="link to site icon">
+              </a>
             </div>
           </article>
           <!-- SMALL PROJECTE ND -->
-        </div>
+
+
+          <!-- SMALL PROJECT START -->
+          <article class="smallproject">
+
+            <div class="smallproject__left">
+              <h4 class="heading--4">Katie Holmes Website</h4>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Commodo sed sed feugiat
+                sagittis purus arcu. In
+                viverra massa sed dolor nisl, sit.</p>
+            </div>
+
+            <div class="smallproject__icon">
+              <a href="#" target="_blank">
+                <img src="../src/assets/linkvg.svg" alt="link to site icon">
+              </a>
+            </div>
+          </article>
+          <!-- SMALL PROJECTE ND -->
+
+
+          <!-- SMALL PROJECT START -->
+          <article class="smallproject">
+
+            <div class="smallproject__left">
+              <h4 class="heading--4">Katie Holmes Website</h4>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Commodo sed sed feugiat
+                sagittis purus arcu. In
+                viverra massa sed dolor nisl, sit.</p>
+            </div>
+
+            <div class="smallproject__icon">
+              <a href="#" target="_blank">
+                <img src="../src/assets/linkvg.svg" alt="link to site icon">
+              </a>
+            </div>
+          </article>
+          <!-- SMALL PROJECTE ND -->
+
+
+          <!-- SMALL PROJECT START -->
+          <article class="smallproject">
+
+            <div class="smallproject__left">
+              <h4 class="heading--4">Katie Holmes Website</h4>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Commodo sed sed feugiat
+                sagittis purus arcu. In
+                viverra massa sed dolor nisl, sit.</p>
+            </div>
+
+            <div class="smallproject__icon">
+              <a href="#" target="_blank">
+                <img src="../src/assets/linkvg.svg" alt="link to site icon">
+              </a>
+            </div>
+          </article>
+          <!-- SMALL PROJECTE ND -->
+
+
+          <!-- SMALL PROJECT START -->
+          <article class="smallproject">
+
+            <div class="smallproject__left">
+              <h4 class="heading--4">Katie Holmes Website</h4>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Commodo sed sed feugiat
+                sagittis purus arcu. In
+                viverra massa sed dolor nisl, sit.</p>
+            </div>
+
+            <div class="smallproject__icon">
+              <a href="#" target="_blank">
+                <img src="../src/assets/linkvg.svg" alt="link to site icon">
+              </a>
+            </div>
+          </article>
+          <!-- SMALL PROJECTE ND -->
+
+
+          <!-- SMALL PROJECT START -->
+          <article class="smallproject">
+
+            <div class="smallproject__left">
+              <h4 class="heading--4">Katie Holmes Website</h4>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Commodo sed sed feugiat
+                sagittis purus arcu. In
+                viverra massa sed dolor nisl, sit.</p>
+            </div>
+
+            <div class="smallproject__icon">
+              <a href="#" target="_blank">
+                <img src="../src/assets/linkvg.svg" alt="link to site icon">
+              </a>
+            </div>
+          </article>
+          <!-- SMALL PROJECTE END -->
+
+        </section>
       </div>
     </section>
+    <!-- SMALLPROJECTE ND -->
 
+    <!-- CONTACT FORM -->
+    <section class="contact container">
+      <div class="contact__content">
+        <h1 class="heading--1 heading--1--contact">Say Hi.</h1>
+        <!-- FORM -->
+        <article class="contact__detail">
+          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam commodo dolor nunc nibh
+            dictumst fringilla
+            posuere. Id at nunc vulputate vitae donec ut etiam sodales nunc. Eget elit vitae viverra quis nulla aliquam
+            venenatis congue.</p>
+
+          <button class="btn btn--primary mt-1">
+            <a href="mailto:judelaurentetejada@gmail.com" target="_blank">
+              Get in touch
+            </a>
+          </button>
+        </article>
+      </div>
+      </div>
+    </section>
   </main>
+
+  <footer class="footer">
+    <div class="container">
+      <section class="footer__content">
+        <div class="footer__Left">
+          <span class="logo">Jude Tejada</span>
+        </div>
+
+        <div class="footer__right">
+          <button class="btn">Go back to top</button>
+        </div>
+      </section>
+    </div>
+  </footer>
 
 
 
