--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
-<body class="white">
+<body class="dark">
 
   <main class="main">
     <div class="container">
@@ -25,18 +25,20 @@
             <li class="nav__li" role="navigation">
               <a href="#projects" class="nav__link" title="link to my project page">Projects</a>
             </li>
+            <div class="nav__darktheme">
+              <input type="checkbox" name="setTheme" id="darkTheme">
+              <label for="darkTheme"></label>
+            </div>
           </ul>
         </div> <!-- nav -- Content-->
       </nav>
       <!-- END OF NAV -->
-      <header class="header">
+      <header class="header" id="header">
         <div class="header__content">
           <h4 class="heading--4 mb-3">Hi I'm a Front-End Developer</h4>
           <h1 class="heading--1">I Make Good Stuffs With The Web</h1>
-          <p class="paragraph mt-1 paragraph--hero">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed amet id
-            netus tellus
-            aenean
-            augue a Praesent congue.</p>
+          <p class="paragraph mt-1 paragraph--hero"> I'm a developer based in the philippines. I love to create web
+            applications with elegant design that provide solutions to many people's problem </p>
         </div>
         <button class="btn btn--outline">
           <a href="#projects" title="Link to go to project section"> See my Works</a>
@@ -76,7 +78,10 @@
         <!--PROJECT-->
         <section class="project">
           <figure class="project__photo">
-            <img src="../src/assets/work1.jpg" alt="Fiddles Project" class="project__img">
+            <a href="https://fiddles.netlify.app/" target="_blank" title="Link that goes to fiddles project">
+              <img src="../src/assets/work1.jpg" alt="Fiddles Project" class="project__img">
+            </a>
+
           </figure>
 
           <article class="project__content" role="button" tabindex="0">
@@ -102,7 +107,9 @@
         <!--PROJECT-->
         <section class="project">
           <figure class="project__photo">
-            <img src="../src/assets/work2.jpg" alt="Movie Library Project" class="project__img">
+            <a href="https://moviefinder19.netlify.app/" target="_blank" title="Link that goes to movieFinder site">
+              <img src="../src/assets/work2.jpg" alt="Movie Library Project" class="project__img"></a>
+
           </figure>
 
           <article class="project__content" role="button" tabindex="0">
@@ -128,7 +135,10 @@
         <!--PROJECT-->
         <section class="project">
           <figure class="project__photo">
-            <img src="../src/assets/work3.jpg" alt="Findhub Project" class="project__img">
+            <a href="https://findhub.netlify.app/" target="_blank" title="link to go to findhub live site">
+              <img src="../src/assets/work3.jpg" alt="Findhub Project" class="project__img">
+            </a>
+
           </figure>
 
           <article class="project__content" role="button" tabindex="0">
@@ -245,10 +255,10 @@
         <h1 class="heading--1 heading--1--contact">Say Hi.</h1>
         <!-- FORM -->
         <article class="contact__detail">
-          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam commodo dolor nunc nibh
-            dictumst fringilla
-            posuere. Id at nunc vulputate vitae donec ut etiam sodales nunc. Eget elit vitae viverra quis nulla aliquam
-            venenatis congue.</p>
+          <h5 class="heading--5 mb-1">Currently available for freelance work</h5>
+          <p class="paragraph">If you want to get in touch, Don't hesitate to send me an email. I'm Happy to talk about
+            opportunities and taking project. Or if you just want to say hi and ask me some some questions I'll be
+            gladly to answer it. </p>
 
           <button class="btn btn--primary mt-3">
             <a href="mailto:judelaurentetejada@gmail.com" target="_blank">
@@ -269,7 +279,10 @@
         </div>
 
         <div class="footer__right">
-          <button class="btn">Go back to top</button>
+          <button class="btn"><a href="#header" title="Go back to top">
+              Go back to top
+            </a>
+          </button>
         </div>
       </section>
     </div>
