added native lazyload to img

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,8 @@
               <picture>
                 <source type="image/webp" srcset="../src/assets/work1.webp">
                 <source type="image/jpeg" srcset="../src/assets/work1.jpg">
-                <img src="../src/assets/work1.jpg" alt="Fiddles Project" class="project__img" loading="lazy">
+                <img src="../src/assets/work1.jpg" alt="Fiddles Project" class="project__img" loading="lazy"
+                  width="100%">
               </picture>
 
             </a>
@@ -130,7 +131,8 @@
               <a>
                 <source type="image/webp" srcset="../src/assets/work2.webp">
                 <source type="image/jpeg" srcset="../src/assets/work2.jpg">
-                <img src="../src/assets/work2.jpg" alt="Movie Library Project" class="project__img" loading="lazy">
+                <img src="../src/assets/work2.jpg" alt="Movie Library Project" class="project__img" loading="lazy"
+                  width="100%">
               </a>
               </picture>
 
@@ -165,7 +167,8 @@
               <picture>
                 <source type="image/webp" srcset="../src/assets/work3.webp">
                 <source type="image/jpeg" srcset="../src/assets/work3.jpg">
-                <img src="../src/assets/work3.jpg" alt="Findhub Project" class="project__img" loading="lazy">
+                <img src="../src/assets/work3.jpg" alt="Findhub Project" class="project__img" loading="lazy"
+                  width="100%">
               </picture>
 
             </a>
