--- a/public/index.html
+++ b/public/index.html
@@ -128,13 +128,16 @@
           <figure class="project__photo">
             <a href="https://moviefinder19.netlify.app/" target="_blank" title="Link that goes to movieFinder site"
               rel="noopener" rel="noreferrer">
-              <a>
+
+              <picture>
                 <source type="image/webp" srcset="../src/assets/work2.webp">
                 <source type="image/jpeg" srcset="../src/assets/work2.jpg">
                 <img src="../src/assets/work2.jpg" alt="Movie Library Project" class="project__img" loading="lazy"
                   width="100%">
-              </a>
               </picture>
+            </a>
+
+
 
 
           </figure>
