defer script tag

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,6 @@
           <figure class="project__photo">
             <a href="https://moviefinder19.netlify.app/" target="_blank" title="Link that goes to movieFinder site"
               rel="noopener" rel="noreferrer">
-
               <picture>
                 <source type="image/webp" srcset="../src/assets/work2.webp">
                 <source type="image/jpeg" srcset="../src/assets/work2.jpg">
@@ -330,7 +329,7 @@
 
 
 
-  <script src="../src/JS/main.js" defer></script>
+  <script defer src="../src/JS/main.js"></script>
 
 
 </body>
